Hide navigation when there is only 1 item

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -28,6 +28,7 @@
                 data-controller="meldingNavigatie"
                 data-meldingNavigatie-melding-uuid-value="{{ melding.uuid }}"
                 data-meldingNavigatie-url-value="/melding/"
+                data-meldingNavigatie-target="navigatie"
             >
                 <span data-meldingNavigatie-target="teller" ></span>
                 <ul class="list__incident-navigation">
