--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -141,12 +141,16 @@
         display: none;
         font-size: 16px;
         color: $gray-tint08;
-        padding-right: 16px;
+        padding-right: 12px;
         transform: translateY(-10px);
 
         @media (min-width: map-get($grid-breakpoints, sm)) {
             display: inline-block;
         }
+    }
+
+    &.hidden {
+        display: none;
     }
 }
 
