--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -15,8 +15,12 @@
     <div
         data-controller="detail"
         data-detail-incident-object-value="{{ melding|json_encode }}"
-        data-detail-incident-y-value="{{ melding.locaties_voor_melding.0.geometrie.coordinates.0 }}"
-        data-detail-incident-x-value="{{ melding.locaties_voor_melding.0.geometrie.coordinates.1 }}"
+        {% with highest_weight_locatie=melding.locaties_voor_melding|dictsort:"gewicht"|last %}
+            {% if highest_weight_locatie %}
+                data-detail-incident-y-value="{{ highest_weight_locatie.geometrie.coordinates.0 }}"
+                data-detail-incident-x-value="{{ highest_weight_locatie.geometrie.coordinates.1 }}"
+            {% endif %}
+        {% endwith %}
     >
     <div class="border-green print-only"></div>
 
@@ -226,21 +230,8 @@
                         </section>
 
                         {% include locatie_template %}
-                        {% include melder_template %}
 
-                        <div class="container__map full-width">
-                            <div
-                                class="map"
-                                id="incidentMap"
-                                data-action="touchstart->detail#onTwoFingerDrag touchend->detail#onTwoFingerDrag"
-                            >
-                                <div class="map__overlay">
-                                    <span>
-                                        Gebruik twee vingers om de kaart te verplaatsen
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
+                        {% include melder_template %}
 
                         <div class="border-green print-only"></div>
                     </div>
