--- a/app/apps/main/templates/melding/part_tijdlijn.html
+++ b/app/apps/main/templates/melding/part_tijdlijn.html
@@ -47,15 +47,17 @@
                                 {% endfor %}
 
                                 {% if not forloop.first %}
-                                <strong>
-                                {% if row_data.mg.taakgebeurtenis %}
-                                {% with taakopdracht=melding|taakopdracht:row_data.mg.taakgebeurtenis.taakopdracht %}
-                                {{taakopdracht.titel}}{% if row_data.mg.taakgebeurtenis.taakstatus.naam != "nieuw" %}: {{taakopdracht.resolutie|vertaal}}{% endif %}
-                                {% endwith %}
-                                {% else %}
-                                melding: {% if row_data.mg.status %}{{row_data.mg.status.naam}}{% else %}communicatie{% endif %}
-                                {% endif %}
-                                </strong>
+                                    <strong>
+                                    {% if row_data.mg.taakgebeurtenis %}
+                                        {% with taakopdracht=melding|taakopdracht:row_data.mg.taakgebeurtenis.taakopdracht %}
+                                        {{taakopdracht.titel}}{% if row_data.mg.taakgebeurtenis.taakstatus.naam != "nieuw" %}: {{taakopdracht.resolutie|vertaal}}{% endif %}
+                                        {% endwith %}
+                                    {% elif row_data.mg.locatie %}
+                                        melding: locatie gewijzigd
+                                    {% else %}
+                                        melding: {% if row_data.mg.status %}{{row_data.mg.status.naam}}{% else %}communicatie{% endif %}
+                                    {% endif %}
+                                    </strong>
                                 {% endif %}
                             </summary>
                             <div class="content">
@@ -66,27 +68,38 @@
                                     <dt>Datum</dt>
                                     <dd>{{ row_data.mg.taakgebeurtenis.aangemaakt_op|to_datetime }}</dd>
                                     {% if row_data.mg.taakgebeurtenis.gebruiker %}
-                                    <dt>Gebruiker</dt>
-                                    <dd>{{ row_data.mg.taakgebeurtenis.gebruiker|gebruiker_middels_email }}</dd>
+                                        <dt>Gebruiker</dt>
+                                        <dd>{{ row_data.mg.taakgebeurtenis.gebruiker|gebruiker_middels_email }}</dd>
                                     {% endif %}
                                     {% if row_data.mg.taakgebeurtenis.omschrijving_intern %}
-                                    <dt>Interne opmerking</dt>
-                                    <dd>{{ row_data.mg.taakgebeurtenis.omschrijving_intern }}</dd>
+                                        <dt>Interne opmerking</dt>
+                                        <dd>{{ row_data.mg.taakgebeurtenis.omschrijving_intern }}</dd>
+                                    {% endif %}
+                                {% elif row_data.mg.locatie %}
+                                    {% if row_data.mg.gebruiker %}
+                                        <dt>Gewijzigd door</dt>
+                                        <dd>{{ row_data.mg.gebruiker|gebruiker_middels_email }}</dd>
+                                    {% endif %}
+                                        <dt>Datum</dt>
+                                        <dd>{{ row_data.mg.aangemaakt_op|to_datetime }}</dd>
+                                    {% if row_data.mg.omschrijving_intern %}
+                                        <dt>Interne opmerking</dt>
+                                        <dd>{{ row_data.mg.omschrijving_intern }}</dd>
                                     {% endif %}
                                 {% else %}
                                     {% if row_data.mg.gebruiker %}
-                                    <dt>Afgehandeld door</dt>
-                                    <dd>{{ row_data.mg.gebruiker|gebruiker_middels_email }}</dd>
+                                        <dt>Afgehandeld door</dt>
+                                        <dd>{{ row_data.mg.gebruiker|gebruiker_middels_email }}</dd>
                                     {% endif %}
-                                    <dt>Datum</dt>
-                                    <dd>{{ row_data.mg.aangemaakt_op|to_datetime }}</dd>
+                                        <dt>Datum</dt>
+                                        <dd>{{ row_data.mg.aangemaakt_op|to_datetime }}</dd>
                                     {% if row_data.mg.omschrijving_extern %}
-                                    <dt>Bericht voor de melder</dt>
-                                    <dd>{{ row_data.mg.omschrijving_extern }}</dd>
+                                        <dt>Bericht voor de melder</dt>
+                                        <dd>{{ row_data.mg.omschrijving_extern }}</dd>
                                     {% endif %}
                                     {% if row_data.mg.omschrijving_intern %}
-                                    <dt>Interne opmerking</dt>
-                                    <dd>{{ row_data.mg.omschrijving_intern }}</dd>
+                                        <dt>Interne opmerking</dt>
+                                        <dd>{{ row_data.mg.omschrijving_intern }}</dd>
                                     {% endif %}
 
                                 {% endif %}
