--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -23,6 +23,11 @@
 body.show-modal {
     @include bodyModal();
 
+    .modal-backdrop {
+        display: block;
+        opacity: 0.5;
+    }
+
     .modal.show {
         @include modalVisible();
     }
