--- a/app/apps/main/templates/pdf/melding.html
+++ b/app/apps/main/templates/pdf/melding.html
@@ -1,9 +1,4 @@
 {% extends "pdf/base.html" %}
-
-
 {% block body %}
-
-<div data-controller="overview">
-    {% include "melding/melding_detail.html" %}
-</div>
-{% endblock%}
+    <div data-controller="overview">{% include "melding/melding_detail.html" %}</div>
+{% endblock body %}
