--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -4,25 +4,41 @@
 <html lang="nl">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
-        <title>{% block title %}PlanR{% endblock %}</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="{{base_url}}{%webpack_static 'images/apple-touch-icon.png' %}"/>
-        <link rel="icon" type="image/png" sizes="32x32" href="{{base_url}}{%webpack_static 'images/favicon-32x32.png' %}"/>
-        <link rel="icon" type="image/png" sizes="16x16" href="{{base_url}}{%webpack_static 'images/favicon-16x16.png' %}"/>
-        <link rel="mask-icon" href="{{base_url}}{%webpack_static 'images/safari-pinned-tab.svg' %}" color="#00811f"/>
-        <link rel="manifest" href="{{base_url}}{%webpack_static 'manifest.json' %}"/>
-        <link rel="shortcut icon" href="{{base_url}}{%webpack_static 'images/favicon.ico' %}"/>
-        <link rel="icon" href="{{base_url}}{%webpack_static 'images/favicon.ico' %}"/>
+        <meta name="viewport"
+              content="user-scalable=no, width=device-width, initial-scale=1.0">
+        <title>
+            {% block title %}PlanR{% endblock title %}
+        </title>
+        <link rel="apple-touch-icon"
+              sizes="180x180"
+              href="{{ base_url }}{% webpack_static 'images/apple-touch-icon.png' %}" />
+        <link rel="icon"
+              type="image/png"
+              sizes="32x32"
+              href="{{ base_url }}{% webpack_static 'images/favicon-32x32.png' %}" />
+        <link rel="icon"
+              type="image/png"
+              sizes="16x16"
+              href="{{ base_url }}{% webpack_static 'images/favicon-16x16.png' %}" />
+        <link rel="mask-icon"
+              href="{{ base_url }}{% webpack_static 'images/safari-pinned-tab.svg' %}"
+              color="#00811f" />
+        <link rel="manifest"
+              href="{{ base_url }}{% webpack_static 'manifest.json' %}" />
+        <link rel="shortcut icon"
+              href="{{ base_url }}{% webpack_static 'images/favicon.ico' %}" />
+        <link rel="icon"
+              href="{{ base_url }}{% webpack_static 'images/favicon.ico' %}" />
         <meta name="turbo-cache-control" content="no-cache">
         {% block stylesheets %}
-            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-                integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-                crossorigin=""/>
+            <link rel="stylesheet"
+                  href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+                  integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+                  crossorigin="" />
             {% render_bundle 'app' 'css' %}
-        {% endblock %}
-
+        {% endblock stylesheets %}
         {% if DEBUG %}
-        <script>
+            <script>
             const chatSocket = new WebSocket(
                 "ws://localhost:"
                 + {{DEV_SOCKET_PORT}}
@@ -37,28 +53,24 @@
             chatSocket.onclose = function(e) {
                 console.error("socket closed unexpectedly");
             };
-        </script>
+            </script>
         {% endif %}
-
         {% block javascripts %}
             {% render_bundle 'app' 'js' %}
-        {% endblock %}
-        <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-        integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-        crossorigin="">
+        {% endblock javascripts %}
+        <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin="">
         </script>
     </head>
     <body>
         <a href="#id_maincontent" class="skiplink">Ga direct naar de content</a>
         {% block header %}
-        {% with pageTitle="PlanR" %}
-        {% include 'snippets/pageheader.html' %}
-        {% endwith %}
-        {% endblock %}
-
+            {% with pageTitle="PlanR" %}
+                {% include "snippets/pageheader.html" %}
+            {% endwith %}
+        {% endblock header %}
         <main data-controller="main">
             <div class="container">
-                {% block body %}{% endblock %}
+                {% block body %}{% endblock body %}
             </div>
         </main>
         <div class="spinner"></div>
