--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -4,33 +4,32 @@
 {% load render_th_tags from melding_tags %}
 {% load render_td_tags from melding_tags %}
 {% load rotterdam_formulier_html %}
-
 {% block body %}
-<turbo-frame id="overview" >
+    <turbo-frame id="overview">
     <div data-controller="overview">
-        <form method="get" action="{% url 'melding_lijst' %}" id="filterForm" data-controller="filter" data-turbo-action="advance">
+        <form method="get"
+              action="{% url 'melding_lijst' %}"
+              id="filterForm"
+              data-controller="filter"
+              data-turbo-action="advance">
             <div class="filter-header">
                 <div class="container__flex">
                     <h1 class="page-title">Meldingen</h1>
                     <span class="help-text">{{ startNum }} - {{ endNum }} van {{ totaal }} resultaten</span>
                 </div>
-                <div class="container__search">
-                    {{ form.q|render_rotterdam_formulier }}
-                </div>
+                <div class="container__search">{{ form.q|render_rotterdam_formulier }}</div>
             </div>
             <div class="container__tools">
                 <div class="container__filter" data-filter-target="filterOverview">
                     {{ form.limit|render_rotterdam_formulier }}
                     {% for veld in form.filters %}
-                    <div class="container__multiselect">
-                        <label class="visually-hidden">{{ veld.label }}</label>
-                        <button class="toggle js-toggle{% if veld.data|length > 0%} active {% endif %}" type="button">{{ veld.label|capfirst }}</button>
-                        <div class="wrapper">
-                            {{ veld|render_rotterdam_formulier }}
+                        <div class="container__multiselect">
+                            <label class="visually-hidden">{{ veld.label }}</label>
+                            <button class="toggle js-toggle{% if veld.data|length > 0 %} active {% endif %}"
+                                    type="button">{{ veld.label|capfirst }}</button>
+                            <div class="wrapper">{{ veld|render_rotterdam_formulier }}</div>
                         </div>
-                    </div>
                     {% endfor %}
-
                 </div>
             </div>
             <div class="container__table">
@@ -40,51 +39,65 @@
                     </thead>
                     <tbody id="id_maincontent">
                         {% for melding in meldingen %}
-
-                        <tr data-action="click->overview#navigate" data-overview-targeturl-param="{% url 'melding_detail' melding.uuid %}">
-                            <td width="80">
-                                {% if melding.bijlagen.0.afbeelding_verkleind_relative_url %}
-                                <div class="container__thumbnail" style="background-image: url('{{melding.bijlagen.0.afbeelding_verkleind_relative_url}}')"></div>
-                                {% elif melding.bijlagen.0.bestand_relative_url %}
-                                <div class="container__thumbnail" style="background-image: url('{{melding.bijlagen.0.bestand_relative_url}}')"></div>
-                                {% else %}
-                                <div class="background-image"></div>
-                                {% endif %}
-                            </td>
-                            {% render_td_tags kolommen %}
-                        </tr>
+                            <tr data-action="click->overview#navigate"
+                                data-overview-targeturl-param="{% url 'melding_detail' melding.uuid %}">
+                                <td width="80">
+                                    {% if melding.bijlagen.0.afbeelding_verkleind_relative_url %}
+                                        <div class="container__thumbnail"
+                                             style="background-image: url('{{ melding.bijlagen.0.afbeelding_verkleind_relative_url }}')">
+                                        </div>
+                                    {% elif melding.bijlagen.0.bestand_relative_url %}
+                                        <div class="container__thumbnail"
+                                             style="background-image: url('{{ melding.bijlagen.0.bestand_relative_url }}')">
+                                        </div>
+                                    {% else %}
+                                        <div class="background-image"></div>
+                                    {% endif %}
+                                </td>
+                                {% render_td_tags kolommen %}
+                            </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
-
             {% if totaal > meldingen|length %}
-            <div class="container__pagination">
-                <div class="pagination">
-                    <div class="wrapper-horizontal">
-                        {% if vorige %}
-                        <button type="button" class="btn--previous has-text" data-action="overview#navigatePrevious">
-                            <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99275 6.99995L0.689453 1.69665L1.75011 0.635986L8.11407 6.99995L1.75011 13.3639L0.689453 12.3032L5.99275 6.99995Z" />
-                            </svg>
-                            Vorige
-                        </button>
-                        {% endif %}
-                        {{ form.offset|render_rotterdam_formulier }}
-                        {% if volgende %}
-                        <button type="button" class="btn--next has-text" data-action="overview#navigateNext">
-                            Volgende
-                            <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99275 6.99995L0.689453 1.69665L1.75011 0.635986L8.11407 6.99995L1.75011 13.3639L0.689453 12.3032L5.99275 6.99995Z" />
-                            </svg>
-                        </button>
-                        {% endif %}
+                <div class="container__pagination">
+                    <div class="pagination">
+                        <div class="wrapper-horizontal">
+                            {% if vorige %}
+                                <button type="button"
+                                        class="btn--previous has-text"
+                                        data-action="overview#navigatePrevious">
+                                    <svg width="9"
+                                         height="14"
+                                         viewBox="0 0 9 14"
+                                         fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99275 6.99995L0.689453 1.69665L1.75011 0.635986L8.11407 6.99995L1.75011 13.3639L0.689453 12.3032L5.99275 6.99995Z" />
+                                    </svg>
+                                    Vorige
+                                </button>
+                            {% endif %}
+                            {{ form.offset|render_rotterdam_formulier }}
+                            {% if volgende %}
+                                <button type="button"
+                                        class="btn--next has-text"
+                                        data-action="overview#navigateNext">
+                                    Volgende
+                                    <svg width="9"
+                                         height="14"
+                                         viewBox="0 0 9 14"
+                                         fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99275 6.99995L0.689453 1.69665L1.75011 0.635986L8.11407 6.99995L1.75011 13.3639L0.689453 12.3032L5.99275 6.99995Z" />
+                                    </svg>
+                                </button>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
-            </div>
             {% endif %}
         </form>
-
     </div>
-</turbo-frame>
-{% endblock%}
+    </turbo-frame>
+{% endblock body %}
