--- a/app/apps/main/templates/melding/part_melding_annuleren.html
+++ b/app/apps/main/templates/melding/part_melding_annuleren.html
@@ -2,89 +2,93 @@
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 {% load context_template from context_tags %}
-
 <turbo-frame id="melding_actie_form">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button
-                    type="button"
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal">
-                </button>
-                <h1>
-                    <span>Melding annuleren</span>
-                </h1>
-                <div class="alert alert--info">
-                    <span>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E"/>
-                        </svg>
-                    </span>
-                    <div>
-                        Door de melding te annuleren wordt de status van de melding aangepast naar ‘Geannuleerd.’ Er wordt geen bericht naar de melder verstuurd.</div>
+                    data-action="detail#closeModal"></button>
+            <h1>
+                <span>Melding annuleren</span>
+            </h1>
+            <div class="alert alert--info">
+                <span>
+                    <svg width="24"
+                         height="24"
+                         viewBox="0 0 24 24"
+                         fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E" />
+                    </svg>
+                </span>
+                <div>
+                    Door de melding te annuleren wordt de status van de melding aangepast naar ‘Geannuleerd.’ Er wordt geen bericht naar de melder verstuurd.
                 </div>
             </div>
-            <div class="modal-body">
-                <section class="section--seperated" data-testid="detailReporter">
-                    <div class="container__details">
-                        {% if aantal_actieve_taken > 0 %}
-                            <div class="alert alert--warning">
-                                <span>
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600"/>
-                                    </svg>
-                                </span>
-                                <div>
-                                    Deze melding bevat de volgende openstaande {% if aantal_actieve_taken == 1 %}taak{% else %}taken{% endif %}:
-                                    <ul>
-                                        {% for taak in actieve_taken %}
-                                        <li>{{taak.titel}}</li>
-                                        {% endfor %}
-                                    </ul>
-                                    Als de melding wordt geannuleerd wordt de status van deze {% if aantal_actieve_taken == 1 %}taak{% else %}taken{% endif %} aangepast naar ‘Voltooid’.
-                                </div>
+        </div>
+        <div class="modal-body">
+            <section class="section--seperated" data-testid="detailReporter">
+                <div class="container__details">
+                    {% if aantal_actieve_taken > 0 %}
+                        <div class="alert alert--warning">
+                            <span>
+                                <svg width="32"
+                                     height="32"
+                                     viewBox="0 0 32 32"
+                                     fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600" />
+                                </svg>
+                            </span>
+                            <div>
+                                Deze melding bevat de volgende openstaande
+                                {% if aantal_actieve_taken == 1 %}
+                                    taak
+                                {% else %}
+                                    taken
+                                {% endif %}
+                                :
+                                <ul>
+                                    {% for taak in actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
+                                </ul>
+                                Als de melding wordt geannuleerd wordt de status van deze
+                                {% if aantal_actieve_taken == 1 %}
+                                    taak
+                                {% else %}
+                                    taken
+                                {% endif %}
+                                aangepast naar ‘Voltooid’.
                             </div>
-                        {% endif %}
-                        <form
-                            action="{% url 'melding_annuleren' melding.uuid %}"
-                            method="post"
-                            class="form--horizontal"
-                            data-controller="meldingbehandelformulier"
-                            data-turbo-frame="_top"
-                            enctype="multipart/form-data"
-                            id="afhandelForm"
-                            novalidate
-                        >
-
-                            {% csrf_token %}
-
-                            <div class="form-control__with-helptext js-validation">
-                                {{ form.omschrijving_intern|render_rotterdam_formulier }}
-                            </div>
-                            <div class="form-row btn-row">
-                                <button
-                                    type="reset"
+                        </div>
+                    {% endif %}
+                    <form action="{% url 'melding_annuleren' melding.uuid %}"
+                          method="post"
+                          class="form--horizontal"
+                          data-controller="meldingbehandelformulier"
+                          data-turbo-frame="_top"
+                          enctype="multipart/form-data"
+                          id="afhandelForm"
+                          novalidate>
+                        {% csrf_token %}
+                        <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
+                        <div class="form-row btn-row">
+                            <button type="reset"
                                     class="btn btn-tertiary"
                                     data-controller="detail"
                                     data-action="detail#closeModal"
-                                    data-detail-target="modalAfhandelen"
-                                >
-                                    <span>Annuleren</span>
-                                </button>
-                                <button
-                                    type="submit"
-                                    class="btn btn-action"
-                                >
-                                    <span>Afhandelen</span>
-                                </button>
-
-                            </div>
-                        </form>
-                    </div>
-                </section>
-            </div>
+                                    data-detail-target="modalAfhandelen">
+                                <span>Annuleren</span>
+                            </button>
+                            <button type="submit" class="btn btn-action">
+                                <span>Afhandelen</span>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </section>
         </div>
     </div>
+</div>
 </turbo-frame>
