--- a/app/apps/main/templates/melding/verzonden.html
+++ b/app/apps/main/templates/melding/verzonden.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
-
 {% block body %}
     <h1>Bedankt</h1>
     <p>Het serviceverzoek is ingediend</p>
-    {% if meldingen_signaal %}<p>Het verzoeknummer is: {{meldingen_signaal.melding}}</p>{% endif %}
-
+    {% if meldingen_signaal %}<p>Het verzoeknummer is: {{ meldingen_signaal.melding }}</p>{% endif %}
     <a href="{% url 'melding_aanmaken' %}" class="btn btn-action">
         <span>Nog een verzoek indienen</span>
     </a>
-{% endblock %}
+{% endblock body %}
