Formatted context templates

--- a/app/apps/context/templates/standaard/melding_detail_titel.html
+++ b/app/apps/context/templates/standaard/melding_detail_titel.html
@@ -1,9 +1,9 @@
 {% load vind_in_dict from querystring_tags %}
-
 <h1>
     {% with hoogste_gewicht_locatie=melding.locaties_voor_melding|dictsort:"gewicht"|last %}
         {% if hoogste_gewicht_locatie.straatnaam %}
-            {{ hoogste_gewicht_locatie.straatnaam }}{% if hoogste_gewicht_locatie.huisnummer %} {{ hoogste_gewicht_locatie.huisnummer }}{% endif %}
+            {{ hoogste_gewicht_locatie.straatnaam }}
+            {% if hoogste_gewicht_locatie.huisnummer %}{{ hoogste_gewicht_locatie.huisnummer }}{% endif %}
         {% else %}
             Melding {{ melding.id }}
         {% endif %}
