Capitalized melding in part_tijdlijn.html

--- a/app/apps/main/templates/melding/part_tijdlijn.html
+++ b/app/apps/main/templates/melding/part_tijdlijn.html
@@ -57,9 +57,9 @@
                                             {% endif %}
                                         {% endwith %}
                                     {% elif row_data.mg.locatie %}
-                                        melding: locatie gewijzigd
+                                        Melding: locatie gewijzigd
                                     {% else %}
-                                        melding:
+                                        Melding:
                                         {% if row_data.mg.status %}
                                             {{ row_data.mg.status.naam }}
                                         {% else %}
